# cinny

./: .eslintignore  .eslintrc.cjs  .eslintrc.js  .git-blame-ignore-revs  .gitignore  .gitmodules  .npmrc  .prettierignore  .swcrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  README.md  _redirects  build.config.ts  config.json  docker-nginx.conf  index.html  manifest.json  netlify.toml  olm.wasm  package-lock.json  package.json  pnpm-lock.yaml  sw.js  tsconfig.json  vite-config.ts  vite.config.js  viteSvgLoader.ts  webpack.common.js  webpack.dev.js  webpack.prod.js
.circleci/: config.yml
.devcontainer/: devcontainer.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yaml  feature_request.md  feature_request.yml
.github/workflows/: archive.yml  build-pull-request.yml  cla.yml  codesee-arch-diagram.yml  deploy-pull-request.yml  dev-deploy.yml  docker-pr.yml  docker.yaml  format.yml  lockfile.yml  netlify-dev.yaml  netlify-dev.yml  netlify-prod.yaml  prod-deploy.yaml  prod-deploy.yml  pull-request.yml  tauri.yaml  tauri.yml  test.yml
contrib/nginx/: README.md  cinny.domain.tld.conf
public/: browserconfig.xml  index.html  manifest.json  model.glb
public/locales/: de.json  en.json  index.js
public/res/: README.md
resources/: in.cinny.Cinny.appdata.xml  in.cinny.Cinny.desktop  in.cinny.cinnyapp.appdata.xml  in.cinny.cinnyapp.desktop
scripts/: release.mjs  tauri-release.mjs
src/: colors.css.ts  config.css.ts  ext.d.ts  font-face.css  font.js  index.jsx  index.scss  index.tsx  sw.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  menu.rs
src/app/: cs-api.ts  cs-errorcode.ts  i18n.jsx  i18n.ts  sw.js
src/client/: dispatcher.ts  initMatrix.js  initMatrix.ts  mx.ts
src/shire/: CrossSigningSetup.js  E2EKeyManagement.js  EventsChannel.js  KeysBackup.js  flow.js
src/types/: iterator.ts  (+3 more)
(+953 files in other folders)
